unsupported/static_h/external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-identifier2.js
a = async function() { g(await) }
